# invenio-geographic-identifiers

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_geographic_identifiers/: __init__.py  cli.py  config.py  ext.py  proxies.py  version.py  views.py
invenio_geographic_identifiers/alembic/: 705b80de6c2f_create_geoidentifiers_tables.py  7fc575665183_create_geoidentifiers_revision.py  __init__.py
invenio_geographic_identifiers/contrib/: __init__.py
invenio_geographic_identifiers/contrib/geonames/: __init__.py  datastreams.py
invenio_geographic_identifiers/contrib/regions/: __init__.py  datastreams.py
invenio_geographic_identifiers/datastreams/: __init__.py  readers.py  transformers.py  writers.py
invenio_geographic_identifiers/fixtures/: __init__.py  iterators.py  tasks.py  vocabularies.py
invenio_geographic_identifiers/geoidentifiers/: __init__.py  api.py  config.py  facets.py  geoidentifiers.py  models.py  resources.py  schema.py  services.py
invenio_geographic_identifiers/geoidentifiers/jsonschemas/: __init__.py
invenio_geographic_identifiers/geoidentifiers/jsonschemas/geoidentifiers/: geoidentifier-v1.0.0.json
invenio_geographic_identifiers/geoidentifiers/mappings/: __init__.py
invenio_geographic_identifiers/geoidentifiers/mappings/os-v2/: __init__.py
invenio_geographic_identifiers/geoidentifiers/mappings/os-v2/geoidentifiers/: geoidentifier-v1.0.0.json
invenio_geographic_identifiers/geoidentifiers/mappings/v7/geoidentifiers/: geoidentifier-v1.0.0.json
tests/: conftest.py  test_alembic.py  test_invenio_geographic_identifiers.py
