# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 GEO Secretariat.
#
# invenio-geographic-identifiers is free software; you can redistribute it
# and/or modify it under the terms of the MIT License; see LICENSE file for
# more details.

[metadata]
name = invenio-geographic-identifiers
version = attr: invenio_geographic_identifiers.__version__
description = InvenioRDM module for the Geographic identifiers vocabularies.
long_description = file: README.rst, CHANGES.rst
keywords = invenio geographic-identifiers geographic geospatial
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/invenio-geographic-identifiers
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=1.2.0
    invenio-vocabularies>=1.0.0,<2.0.0

[options.extras_require]
docs =
    Sphinx>=4.5.0
tests =
    pytest-black>=0.3.0
    invenio-app>=1.3.4,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0
    tripoli~=2.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
flask.commands =
    geoidentifiers = invenio_geographic_identifiers.cli:geoidentifiers
invenio_base.apps =
    geoidentifiers = invenio_geographic_identifiers:InvenioGeographicIdentifiers
invenio_base.api_apps =
    geoidentifiers = invenio_geographic_identifiers:InvenioGeographicIdentifiers
invenio_base.blueprints =
    geoidentifiers = invenio_geographic_identifiers.views:blueprint
invenio_base.api_blueprints =
    geoidentifiers = invenio_geographic_identifiers.views:create_geoidentifiers_blueprint_from_app
invenio_db.models =
    geoidentifiers = invenio_geographic_identifiers.geoidentifiers.models
invenio_jsonschemas.schemas =
    geoidentifiers = invenio_geographic_identifiers.geoidentifiers.jsonschemas
invenio_search.mappings =
    geoidentifiers = invenio_geographic_identifiers.geoidentifiers.mappings
invenio_db.alembic =
    invenio_geographic_identifiers = invenio_geographic_identifiers:alembic

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401, D403

[compile_catalog]
directory = invenio_geographic_identifiers/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = GEO Secretariat
msgid_bugs_address = secretariat@geosec.org
mapping-file = babel.ini
output-file = invenio_geographic_identifiers/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_geographic_identifiers/translations/messages.pot
output-dir = invenio_geographic_identifiers/translations/

[update_catalog]
input-file = invenio_geographic_identifiers/translations/messages.pot
output-dir = invenio_geographic_identifiers/translations/

[isort]
profile = black

[check-manifest]
ignore =
    bootstrap*
    Vagrantfile
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_geographic_identifiers --cov-report=term-missing
testpaths = docs tests invenio_geographic_identifiers
